<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="#000000"
    tools:context="max.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wholeLayout"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputLayout"
            android:paddingTop="15pt">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:id="@+id/input"
                android:textSize="15pt"
                android:layout_weight="1"
                android:background="#D3D3D3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60pt"
            android:paddingRight="60pt"
            android:paddingTop="10pt">
            <Button
                android:layout_width="match_parent"
                android:layout_height="20pt"
                android:text="@string/solve"
                android:textSize="10pt"
                android:id="@+id/solve"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/result"
                android:textSize="15pt"
                android:textColor="#39FF14"
                android:paddingTop="10pt"
                android:paddingBottom="15pt"
                android:text="@string/result"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10pt">
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#fd7272"
                android:id="@+id/rightP"
                android:text="@string/rightP"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#fd7272"
                android:id="@+id/leftP"
                android:text="@string/leftP"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/multiply"
                android:text="@string/multiply"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/divide"
                android:text="@string/divide"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/add"
                android:text="@string/add"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
            <Button
                android:layout_width="27pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/subtract"
                android:text="@string/subtract"
                android:textSize="12pt"
                android:layout_marginRight="5pt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8pt">
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/one"
                android:text="@string/one"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/two"
                android:text="@string/two"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/three"
                android:text="@string/three"
                android:textSize="15pt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8pt">
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/four"
                android:text="@string/four"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/five"
                android:text="@string/five"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/six"
                android:text="@string/six"
                android:textSize="15pt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8pt">
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/seven"
                android:text="@string/seven"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/eight"
                android:text="@string/eight"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/nine"
                android:text="@string/nine"
                android:textSize="15pt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/decimal"
                android:text="@string/decimal"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/zero"
                android:text="@string/zero"
                android:textSize="15pt"
                android:layout_marginRight="15pt"/>
            <Button
                android:layout_width="40pt"
                android:layout_height="30pt"
                android:background="#C0C0C0"
                android:id="@+id/clear"
                android:text="@string/clear"
                android:textSize="15pt"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
